# api/api.go
@@ -26,7 +26,7 @@ type RouterOptions struct {
 // @securityDefinitions.apikey ApiKeyAuth
 // @in header
 // @name Authorization
-// @Security ApiKeyAuth
+
 func New(opt *RouterOptions) *gin.Engine {
 	router := gin.Default()
 
@@ -76,7 +76,6 @@ func New(opt *RouterOptions) *gin.Engine {
 	apiV1.POST("/auth/forgot-password", handlerV1.ForgotPassword)
 	apiV1.POST("/auth/verify-forgot-password", handlerV1.VerifyForgotPassword)
 	apiV1.POST("/auth/update-password", handlerV1.UpdatePassword)
-
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
