# api/docs/swagger.json
@@ -131,11 +131,6 @@
         },
         "/auth/update-password": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Update password",
                 "consumes": [
                     "application/json"
@@ -270,21 +265,20 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Limit",
+                        "default": 10,
                         "name": "limit",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "Page",
+                        "default": 1,
                         "name": "page",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Search",
                         "name": "search",
                         "in": "query"
                     }
@@ -293,7 +287,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Category"
+                            "$ref": "#/definitions/models.GetAllCategoriesResponse"
                         }
                     },
                     "500": {
@@ -522,11 +516,6 @@
                 }
             },
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Create a comment",
                 "consumes": [
                     "application/json"
@@ -609,11 +598,6 @@
                 }
             },
             "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Update a comments",
                 "consumes": [
                     "application/json"
@@ -659,11 +643,6 @@
                 }
             },
             "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Delete a comment",
                 "consumes": [
                     "application/json"
@@ -696,11 +675,6 @@
         },
         "/likes": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Create or update like",
                 "consumes": [
                     "application/json"
@@ -741,11 +715,6 @@
         },
         "/likes/user-post": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Get like by user and post",
                 "consumes": [
                     "application/json"
@@ -814,11 +783,6 @@
                         "name": "page",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "search",
-                        "in": "query"
                     },
                     {
                         "enum": [
@@ -928,12 +892,7 @@
                 }
             },
             "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Update a post",
+                "description": "Update post",
                 "consumes": [
                     "application/json"
                 ],
@@ -943,7 +902,7 @@
                 "tags": [
                     "post"
                 ],
-                "summary": "Update a post",
+                "summary": "Update post",
                 "parameters": [
                     {
                         "type": "integer",
@@ -954,17 +913,17 @@
                     },
                     {
                         "description": "post",
-                        "name": "user",
+                        "name": "post",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Post"
+                            "$ref": "#/definitions/models.ChangePost"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/models.Post"
                         }
@@ -978,11 +937,6 @@
                 }
             },
             "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Delete a posts",
                 "consumes": [
                     "application/json"
@@ -1262,6 +1216,26 @@
                 }
             }
         },
+        "models.ChangePost": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Comment": {
             "type": "object",
             "properties": {
@@ -1305,6 +1279,9 @@
                 },
                 "post_id": {
                     "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -1324,6 +1301,9 @@
         },
         "models.CreatePostRequest": {
             "type": "object",
+            "required": [
+                "title"
+            ],
             "properties": {
                 "category_id": {
                     "type": "integer"
@@ -1336,6 +1316,9 @@
                 },
                 "title": {
                     "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -1409,6 +1392,20 @@
             "properties": {
                 "email": {
                     "type": "string"
+                }
+            }
+        },
+        "models.GetAllCategoriesResponse": {
+            "type": "object",
+            "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Category"
+                    }
+                },
+                "count": {
+                    "type": "integer"
                 }
             }
         },
@@ -1597,20 +1594,11 @@
         "models.UpdateComment": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
                 "description": {
                     "type": "string"
                 },
-                "id": {
+                "user_id": {
                     "type": "integer"
-                },
-                "post_id": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
