# api/models/comment.go
@@ -11,15 +11,13 @@ type Comment struct {
 
 type CreateComment struct {
 	PostId      int    `json:"post_id" db:"post_id"`
+	UserID      int    `json:"user_id" db:"user_id"`
 	Description string `json:"description" db:"description"`
 }
 
 type UpdateComment struct {
-	Id          int    `json:"id" db:"id"`
-	PostId      int    `json:"post_id" db:"post_id"`
+	UserID      int    `json:"user_id" db:"user_id"`
 	Description string `json:"description" db:"description"`
-	CreatedAt   string `json:"created_at" db:"created_at"`
-	UpdatedAt   string `json:"updated_at" db:"updated_at"`
 }
 
 type GetAllCommentsParams struct {
