# api/models/post.go
@@ -18,10 +18,18 @@ type PostLikeInfo struct {
 }
 
 type CreatePostRequest struct {
-	Title       string `json:"title"`
+	Title       string `json:"title" binding:"required"`
 	Description string `json:"description"`
 	ImageUrl    string `json:"image_url"`
 	CategoryID  int64  `json:"category_id"`
+	UserId      int64  `json:"user_id"`
+}
+
+type ChangePost struct {
+	UserId      int64  `json:"user_id"`
+	Title       string `json:"title" binding:"required"`
+	Description string `json:"description"`
+	ImageUrl    string `json:"image_url"`
 }
 
 type GetAllPostsParams struct {
